--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-winrt = "0.7.0"
+winrt = "0.7.1"
 
 [build-dependencies]
-winrt = "0.7.0"
+winrt = "0.7.1"
+
+[package.metadata.winrt.dependencies]
+"Win2D.uwp" = "1.25.0"
+"Microsoft.VCRTForwarders.140" = "1.0.6"
