--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ authors = ["Michael Ilyin <milyin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-winit = "0.22.2"
+winit = "0.23.0"
 raw-window-handle = "0.3.3"
 winrt = "0.7.2"
 rand = "0.7.3"
 bindings = { path = "bindings" }
 model = { path = "model" }
 ndarray = "0.13"
+float-ord = "0.2"
