--- a/panelgui/Cargo.toml
+++ b/panelgui/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "game2048-rs"
+name = "panelgui"
 version = "0.1.0"
 authors = ["Michael Ilyin <milyin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 winit = "0.23.0"
+raw-window-handle = "0.3.3"
 winrt = "0.7.2"
-bindings = { path = "bindings" }
-model = { path = "model" }
-panelgui = { path = "panelgui" }
+bindings = { path = "../bindings" }
+float-ord = "0.2"
