--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 winit = "0.23.0"
-winrt = "0.7.2"
+winrt ={ git = "https://github.com/microsoft/winrt-rs" }
 bindings = { path = "bindings" }
 model = { path = "model" }
 panelgui = { path = "panelgui" }
