--- a/panelgui/Cargo.toml
+++ b/panelgui/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 winit = "0.23.0"
 raw-window-handle = "0.3.3"
-winrt = "0.7.2"
+winrt ={ git = "https://github.com/microsoft/winrt-rs" }
 bindings = { path = "../bindings" }
 float-ord = "0.2"
 enumflags2="0.7.0-preview1"
