--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ bindings = { path = "bindings" }
 model = { path = "model" }
 panelgui = { path = "panelgui" }
 float-ord = "0.2"
+lazy_static = "1.4.0"
